--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,6 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+        ref: master  # 强制检出 master 分支（避免 detached HEAD）
       - name: Setup Pnpm
         uses: pnpm/action-setup@v2
         with:
