--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '22'
-          registry-url: 'https://registry.npmmirror.com/'
+          registry-url: 'https://registry.npmjs.org/'
           cache: 'pnpm'
       - name: Install dependencies
         run: pnpm install
