chore: 更新项目ts、prettier、typedoc、eslint、git等配置

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
       "@/*": ["src/*"]
     }
   },
-  "include": ["src", "test", "scripts"],
+  "include": ["src", "test"],
   "exclude": ["node_modules", "dist", "docs"]
 }
